--- a/src/content/pages/tempe-property-management.html
+++ b/src/content/pages/tempe-property-management.html
@@ -1,14 +1,14 @@
 ---
-title: 'Property Management Services in Buckeye'
-description: 'Property management services in Buckeye & West Valley. Full-service leasing, inspections, maintenance, and responsive local experts for your rental property.'
-preloadImg: '/assets/images/pm-buckeye.webp'
-permalink: 'buckeye-property-management/'
+title: 'Property Management Services in Tempe'
+description: 'Property management services in Tempe & Valley. Full-service leasing, inspections, maintenance, and responsive local experts for your rental property.'
+preloadImg: '/assets/images/tempe.webp'
+permalink: 'tempe-property-management/'
 ---
 
 {% extends "layouts/base.html" %}
 
 {% block head %}
-    <link rel="stylesheet" href="/assets/css/buckeye-property-management.css">
+    <link rel="stylesheet" href="/assets/css/goodyear-property-management.css">
 {% endblock %}
 
 {% block body %}
@@ -20,18 +20,18 @@ permalink: 'buckeye-property-management/'
 
 <section id="hero-81">
     <div class="cs-container">
-        <h1 class="cs-title">Buckeye Property Management Made Simple</h1>
+        <h1 class="cs-title">Tempe Property Management Made Simple</h1>
         <p class="cs-text">
-Full-service leasing, thorough inspections, and responsive local experts for your Buckeye rental property. Trusted by 450+ property owners in the West Valley.
+Full-service leasing, thorough inspections, and responsive local experts for your Tempe rental property. Trusted by 450+ property owners in the Valley.
         </p>
         <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Phone Call</a>
     </div>
 
     <!-- Background Image -->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/assets/images/pm-buckeye-m.webp">
-        <source media="(min-width: 601px)" srcset="/assets/images/pm-buckeye.webp">
-        <img fetchpriority="high" decoding="async" src="/assets/images/pm-buckeye.webp" alt="Buckeye" width="2250" height="1500" aria-hidden="true">
+        <source media="(max-width: 600px)" srcset="/assets/images/tempe-m.webp">
+        <source media="(min-width: 601px)" srcset="/assets/images/tempe.webp">
+        <img fetchpriority="high" decoding="async" src="/assets/images/tempe.webp" alt="Tempe" width="2250" height="1500" aria-hidden="true">
     </picture>
 </section>
 
@@ -72,9 +72,9 @@ As a family-owned business for 28+ years, we pride ourselves on trust, integrity
             <picture class="cs-icon">
                 <img loading="lazy" decoding="async" src="/assets/svgs/star.svg" alt="local expert icon" width="52" height="52" aria-hidden="true">
             </picture>
-            <h2 class="cs-title">Local Buckeye Experts</h2>
+            <h2 class="cs-title">Local Tempe Experts</h2>
             <p class="cs-text">
-Based in Buckeye and serving Verrado, Sundance, Festival Ranch, and all West Valley neighborhoods. We are very in touch with the current market.
+Based in Tempe and serving Tempe Town Lake, ASU area, South Tempe, and all Valley neighborhoods. We are very in touch with the current market.
             </p>
         </li>
     </ul>
@@ -103,7 +103,7 @@ Based in Buckeye and serving Verrado, Sundance, Festival Ranch, and all West Val
 				<span class="cs-topper">How We Help</span>
 				<h2 class="cs-title">What's Included With Our Property Management Services</h2>
                 <p class="cs-text">
-                    Looking for the best property management company in Buckeye, AZ? We're the local experts who understand your neighborhood and your investment goals. Here's why you should choose us to be your Buckeye property manager:
+                    Looking for the best property management company in Tempe, AZ? We're the local experts who understand your neighborhood and your investment goals. Here's why you should choose us to be your Tempe property manager:
                 </p>
             <ul id="list-1405" class="cs-ul">
                 <li class="cs-li">
@@ -156,7 +156,7 @@ Based in Buckeye and serving Verrado, Sundance, Festival Ranch, and all West Val
 			<div class="cs-flex">
 				<h3 class="cs-h3">28+ Years of Experience</h3>
 				<p class="cs-item-text">
-                    Trusted, experienced property managers serving Buckeye and the West Valley.
+                    Trusted, experienced property managers serving Tempe and the Valley.
 				</p>
 			</div>
 		</li>
@@ -165,7 +165,7 @@ Based in Buckeye and serving Verrado, Sundance, Festival Ranch, and all West Val
 			<div class="cs-flex">
 				<h3 class="cs-h3">450 Properties Managed</h3>
 				<p class="cs-item-text">
-                    A proven track record of managing hundreds of rentals in Buckeye, Verrado, and the West Valley.
+                    A proven track record of managing hundreds of rentals in Tempe, Tempe Town Lake, and the Valley.
 				</p>
 			</div>
 		</li>
@@ -192,7 +192,7 @@ Based in Buckeye and serving Verrado, Sundance, Festival Ranch, and all West Val
             <span class="cs-topper">Why clients trust us</span>
             <h2 class="cs-title">Words From Our Customers</h2>
 <p class="cs-text">
-Property owners in Buckeye and the West Valley trust our property management team for responsive communication, local market expertise, and consistent results. Read what our clients say about our leasing, maintenance, and personal attention.
+Property owners in Tempe, Tempe Town Lake, and the Valley trust our property management team for responsive communication, local market expertise, and consistent results. Read what our clients say about our leasing, maintenance, and personal attention.
 </p>
 
         </div>
@@ -202,7 +202,7 @@ Property owners in Buckeye and the West Valley trust our property management tea
                 <span class="cs-name">Real Review by Property Owner</span>
                 <span class="cs-desc">Posted on Google</span>
                 <p class="cs-item-text">
-                    A very PROFESSIONAL, responsive, and HONEST company. Every employee that I have worked with has proved they deserve my business. This is a company that will protect your interests! Strongly recommend especially if you want to live or rent in the wonderful West Valley community.
+                    A very PROFESSIONAL, responsive, and HONEST company. Every employee that I have worked with has proved they deserve my business. This is a company that will protect your interests! Strongly recommend especially if you want to live or rent in the wonderful Valley community.
                 </p>
             </li>
             <li class="cs-item">
@@ -235,17 +235,17 @@ I can't imagine another company who could be more responsive and communicative.
 <section id="cs-contact-486">
     <div class="cs-container">
         <div class="cs-content">
-            <h2 class="cs-title">Looking for the best property management company in <span class="cs-color">Buckeye, AZ?</span></h2>
+            <h2 class="cs-title">Looking for the best property management company in <span class="cs-color">Tempe, AZ?</span></h2>
             <p class="cs-text">
-Interested in our property management services or want to discuss your rental property in Buckeye or the West Valley? Fill out the form and our team will reach out to answer your questions and explain how we can help maximize your investment.
+Interested in our property management services or want to discuss your rental property in Tempe, Tempe Town Lake, or the Valley? Fill out the form and our team will reach out to answer your questions and explain how we can help maximize your investment.
             </p>
             <span class="cs-heading">Prefer to speak with us directly?</span>
             <a href="tel:623-262-8584" class="cs-link">Phone: (623) 248-1929</a>
             <a href="mailto:kolby.sunseeker@gmail.com" class="cs-link">Email: ken.sunseeker@gmail.com</a>
         </div>
         <!--Form-->
-        <form id="cs-form-486" name="Buckeye PM Form" method="post" data-netlify="true" data-netlify-recaptcha="true" action="/submission-complete/">
-            <input type="hidden" name="form-name" value="Buckeye PM Form">
+        <form id="cs-form-486" name="Tempe PM Form" method="post" data-netlify="true" data-netlify-recaptcha="true" action="/submission-complete/">
+            <input type="hidden" name="form-name" value="Tempe PM Form">
             
             <h3 class="cs-h3">Contact Us Today For A Free Rental Analysis!</h3>
             <label class="cs-label">
