hid read more sections in about page

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -276,7 +276,7 @@ eleventyNavigation:
             <p class="cs-item-text">
                 A thriving, family-friendly community with rapid growth and great investment potential.
             </p>
-            <a href="/goodyear-property-management/" class="cs-link">
+          <!--  <a href="/goodyear-property-management/" class="cs-link">
               Read More
               <img
                     class="cs-arrow"
@@ -287,7 +287,7 @@ eleventyNavigation:
                     width="20"
                     height="20"
                     aria-hidden="true">
-            </a>
+            </a>-->
           </div>
         </li>
         <li class="cs-item">
@@ -314,7 +314,7 @@ eleventyNavigation:
               <p class="cs-item-text">
                 One of the fastest-growing cities in the U.S., offering new developments and suburban charm.
             </p>
-              <a href="/buckeye-property-management/" class="cs-link">
+        <!--      <a href="/buckeye-property-management/" class="cs-link">
                 Read More
                 <img
                       class="cs-arrow"
@@ -325,7 +325,7 @@ eleventyNavigation:
                       width="20"
                       height="20"
                       aria-hidden="true">
-              </a>
+              </a>-->
             </div>
           </li>
           <li class="cs-item">
@@ -352,7 +352,7 @@ eleventyNavigation:
               <p class="cs-item-text">
                 A vibrant city known for its recreational amenities and strong rental market.
                           </p>
-              <a href="/surprise-property-management/" class="cs-link">
+        <!--      <a href="/surprise-property-management/" class="cs-link">
                 Read More
                 <img
                       class="cs-arrow"
@@ -363,7 +363,7 @@ eleventyNavigation:
                       width="20"
                       height="20"
                       aria-hidden="true">
-              </a>
+              </a>-->
             </div>
           </li>
 
@@ -391,7 +391,7 @@ eleventyNavigation:
               <p class="cs-item-text">
                 A picturesque and upscale community with a small-town feel and strong rental demand.
                           </p>
-              <a href="/litchfield-park-property-management/" class="cs-link">
+       <!--       <a href="/litchfield-park-property-management/" class="cs-link">
                 Read More
                 <img
                       class="cs-arrow"
@@ -402,7 +402,7 @@ eleventyNavigation:
                       width="20"
                       height="20"
                       aria-hidden="true">
-              </a>
+              </a>-->
             </div>
           </li>
 
@@ -430,7 +430,7 @@ eleventyNavigation:
               <p class="cs-item-text">
                 A dynamic city with a growing economy and excellent access to Phoenix.
                           </p>
-              <a href="/avondale-property-management/" class="cs-link">
+      <!--        <a href="/avondale-property-management/" class="cs-link">
                 Read More
                 <img
                       class="cs-arrow"
@@ -441,7 +441,7 @@ eleventyNavigation:
                       width="20"
                       height="20"
                       aria-hidden="true">
-              </a>
+              </a>-->
             </div>
           </li>
           <li class="cs-item">
@@ -468,7 +468,7 @@ eleventyNavigation:
               <p class="cs-item-text">
                 A sought-after area with great schools, parks, and a booming real estate market.
                           </p>
-              <a href="/peoria-property-management/" class="cs-link">
+    <!--          <a href="/peoria-property-management/" class="cs-link">
                 Read More
                 <img
                       class="cs-arrow"
@@ -479,7 +479,7 @@ eleventyNavigation:
                       width="20"
                       height="20"
                       aria-hidden="true">
-              </a>
+              </a>-->
             </div>
           </li>
 
@@ -507,7 +507,7 @@ eleventyNavigation:
             <p class="cs-item-text">
                 Home to major entertainment venues and a diverse housing market.
                         </p>
-            <a href="/glendale-property-management/" class="cs-link">
+       <!--     <a href="/glendale-property-management/" class="cs-link">
               Read More
               <img
                     class="cs-arrow"
@@ -518,7 +518,7 @@ eleventyNavigation:
                     width="20"
                     height="20"
                     aria-hidden="true">
-            </a>
+            </a>-->
           </div>
         </li>
 
@@ -546,7 +546,7 @@ eleventyNavigation:
             <p class="cs-item-text">
                 The heart of the Valley with endless rental opportunities and urban appeal.
             </p>
-            <a href="/phoenix-property-management/" class="cs-link">
+       <!--     <a href="/phoenix-property-management/" class="cs-link">
               Read More
               <img
                     class="cs-arrow"
@@ -557,7 +557,7 @@ eleventyNavigation:
                     width="20"
                     height="20"
                     aria-hidden="true">
-            </a>
+            </a>-->
           </div>
         </li>
         <li class="cs-item">
@@ -584,7 +584,7 @@ eleventyNavigation:
             <p class="cs-item-text">
                 A lively college town with strong rental demand driven by Arizona State University.
                         </p>
-            <a href="/tempe-property-management/" class="cs-link">
+           <!-- <a href="/tempe-property-management/" class="cs-link">
               Read More
               <img
                     class="cs-arrow"
@@ -595,7 +595,7 @@ eleventyNavigation:
                     width="20"
                     height="20"
                     aria-hidden="true">
-            </a>
+            </a>-->
           </div>
         </li>
         <li class="cs-item">
@@ -622,7 +622,7 @@ eleventyNavigation:
             <p class="cs-item-text">
                 One of Arizona's largest cities, offering diverse rental options and a thriving job market.
                         </p>
-            <a href="/mesa-property-management/" class="cs-link">
+       <!--     <a href="/mesa-property-management/" class="cs-link">
               Read More
               <img
                     class="cs-arrow"
@@ -633,7 +633,7 @@ eleventyNavigation:
                     width="20"
                     height="20"
                     aria-hidden="true">
-            </a>
+            </a>-->
           </div>
         </li>
         <li class="cs-item">
@@ -660,7 +660,7 @@ eleventyNavigation:
             <p class="cs-item-text">
                 A top-rated suburban city known for its safety, schools, and community-focused living.
                         </p>
-            <a href="/gilbert-property-management/" class="cs-link">
+         <!--   <a href="/gilbert-property-management/" class="cs-link">
               Read More
               <img
                     class="cs-arrow"
@@ -671,7 +671,7 @@ eleventyNavigation:
                     width="20"
                     height="20"
                     aria-hidden="true">
-            </a>
+            </a>-->
           </div>
         </li>
         <li class="cs-item">
@@ -698,7 +698,7 @@ eleventyNavigation:
             <p class="cs-item-text">
                 A tech-driven city with a strong economy and desirable neighborhoods.
                         </p>
-            <a href="/chandler-property-management/" class="cs-link">
+      <!--      <a href="/chandler-property-management/" class="cs-link">
               Read More
               <img
                     class="cs-arrow"
@@ -709,7 +709,7 @@ eleventyNavigation:
                     width="20"
                     height="20"
                     aria-hidden="true">
-            </a>
+            </a>-->
           </div>
         </li>
       </ul>
