added a script tag in the goodyear pm page and added sunseeker form handler js file to capture leads

--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -244,7 +244,7 @@ Interested in our property management services or want to discuss your rental pr
             <a href="mailto:kolby.sunseeker@gmail.com" class="cs-link">Email: ken.sunseeker@gmail.com</a>
         </div>
         <!--Form-->
-        <form id="cs-form-486" name="Goodyear PM Form" method="post" data-netlify="true" data-netlify-recaptcha="true" action="/submission-complete/">
+        <form id="cs-form-486" name="Goodyear PM Form" method="post" data-netlify="true" data-netlify-recaptcha="true" action="/submission-complete/" onsubmit="submitToCRM(event)">            
             <input type="hidden" name="form-name" value="Goodyear PM Form">
             
             <h3 class="cs-h3">Contact Us Today For A Free Rental Analysis!</h3>
