--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -278,5 +278,7 @@ Interested in our property management services or want to discuss your rental pr
         </form>
     </div>
 </section>
-                                                                        
+
+<script src="/assets/js/form-integration.js"></script>
+
 {% endblock %}
