--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -9,6 +9,7 @@ permalink: 'goodyear-property-management/'
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/goodyear-property-management.css">
+    <script src="/assets/js/form-integration.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -244,7 +245,7 @@ Interested in our property management services or want to discuss your rental pr
             <a href="mailto:kolby.sunseeker@gmail.com" class="cs-link">Email: ken.sunseeker@gmail.com</a>
         </div>
         <!--Form-->
-        <form id="cs-form-486" name="Goodyear PM Form" method="post" data-netlify="true" data-netlify-recaptcha="true" action="/submission-complete/">
+        <form id="cs-form-486" name="Goodyear PM Form" method="post" data-netlify="true" data-netlify-recaptcha="true">
                         
             <input type="hidden" name="form-name" value="Goodyear PM Form">
             
@@ -278,7 +279,5 @@ Interested in our property management services or want to discuss your rental pr
         </form>
     </div>
 </section>
-
-<script src="/assets/js/form-integration.js"></script>
 
 {% endblock %}
