added supabase configurations

--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -278,5 +278,8 @@ Interested in our property management services or want to discuss your rental pr
         </form>
     </div>
 </section>
+
+<!-- Supabase Integration Script -->
+<script type="module" src="/assets/js/supabase-form.js"></script>
                                                                         
 {% endblock %}
