--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -244,7 +244,7 @@ Interested in our property management services or want to discuss your rental pr
             <a href="mailto:kolby.sunseeker@gmail.com" class="cs-link">Email: ken.sunseeker@gmail.com</a>
         </div>
         <!--Form-->
-        <form id="cs-form-486" name="Goodyear PM Form" method="post">
+        <form id="cs-form-486" name="Goodyear PM Form" method="post" data-netlify-recaptcha="true">
                         
             <input type="hidden" name="form-name" value="Goodyear PM Form">
             
@@ -273,6 +273,7 @@ Interested in our property management services or want to discuss your rental pr
                 Tell Us About Your Property
                 <textarea class="cs-input cs-textarea" required name="Message" id="message-1333" placeholder="Write message..."></textarea>
             </label>
+             <div data-netlify-recaptcha="true"></div>
             <button class="cs-button-solid cs-submit" type="submit">Request Information</button>
         </form>
     </div>
