Make message field required on about page form

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -221,7 +221,7 @@ eleventyNavigation:
     </label>
     <label class="cs-label cs-message">
         Tell Us About Your Property
-        <textarea class="cs-input cs-textarea" name="message" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
+        <textarea class="cs-input cs-textarea" required name="message" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
     </label>
     <div data-netlify-recaptcha="true"></div>
     <div class="cs-wrapper">
