Update Goodyear page: remove Supabase, connect to about page and sitemap

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -276,7 +276,7 @@ eleventyNavigation:
             <p class="cs-item-text">
                 A thriving, family-friendly community with rapid growth and great investment potential.
             </p>
-          <!--  <a href="/goodyear-property-management/" class="cs-link">
+            <a href="/goodyear-property-management/" class="cs-link">
               Read More
               <img
                     class="cs-arrow"
@@ -287,7 +287,7 @@ eleventyNavigation:
                     width="20"
                     height="20"
                     aria-hidden="true">
-            </a>-->
+            </a>
           </div>
         </li>
         <li class="cs-item">
