--- a/src/content/pages/sitemap.html
+++ b/src/content/pages/sitemap.html
@@ -57,7 +57,7 @@ eleventyNavigation:
                 <li><a href="/rentals">Current Rentals</a></li>
                 <li><a href="#">Gilbert, AZ</a></li>
                 <li><a href="#">Glendale, AZ</a></li>
-                <li><a href="#">Goodyear, AZ</a></li>
+                <li><a href="/goodyear-property-management/">Goodyear, AZ</a></li>
                 <li><a href="/rentals">Houses for Rent</a></li>
                 <li><a href="#">Litchfield Park, AZ</a></li>
                 <li><a href="#">Mesa, AZ</a></li>
