Update about page: fix Goodyear image reference and update all city alt text

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -261,12 +261,12 @@ eleventyNavigation:
             <!--Tablet and above Image-->
             <source
                   media="(min-width: 601px)"
-                  srcset="/assets/images/goodyear.webp">
+                  srcset="/assets/images/pm-goodyear.webp">
             <img
                   loading="lazy"
                   decoding="async"
-                  src="/assets/images/goodyear.webp"
-                  alt="mechanic"
+                  src="/assets/images/pm-goodyear.webp"
+                  alt="Goodyear"
                   width="413"
                   height="240"
                   aria-hidden="true">
@@ -304,7 +304,7 @@ eleventyNavigation:
                     loading="lazy"
                     decoding="async"
                     src="/assets/images/buckeye.webp"
-                    alt="mechanic"
+                    alt="Buckeye"
                     width="413"
                     height="240"
                     aria-hidden="true">
@@ -342,7 +342,7 @@ eleventyNavigation:
                     loading="lazy"
                     decoding="async"
                     src="/assets/images/surprise.webp"
-                    alt="mechanic"
+                    alt="Surprise"
                     width="413"
                     height="240"
                     aria-hidden="true">
@@ -381,7 +381,7 @@ eleventyNavigation:
                     loading="lazy"
                     decoding="async"
                     src="/assets/images/litchfield-park.webp"
-                    alt="mechanic"
+                    alt="Litchfield Park"
                     width="413"
                     height="240"
                     aria-hidden="true">
@@ -420,7 +420,7 @@ eleventyNavigation:
                     loading="lazy"
                     decoding="async"
                     src="/assets/images/avondale.webp"
-                    alt="mechanic"
+                    alt="Avondale"
                     width="413"
                     height="240"
                     aria-hidden="true">
@@ -458,7 +458,7 @@ eleventyNavigation:
                     loading="lazy"
                     decoding="async"
                     src="/assets/images/peoria.webp"
-                    alt="mechanic"
+                    alt="Peoria"
                     width="413"
                     height="240"
                     aria-hidden="true">
@@ -497,7 +497,7 @@ eleventyNavigation:
                   loading="lazy"
                   decoding="async"
                   src="/assets/images/glendale.webp"
-                  alt="mechanic"
+                  alt="Glendale"
                   width="413"
                   height="240"
                   aria-hidden="true">
@@ -536,7 +536,7 @@ eleventyNavigation:
                   loading="lazy"
                   decoding="async"
                   src="/assets/images/phoenix.webp"
-                  alt="mechanic"
+                  alt="Phoenix"
                   width="413"
                   height="240"
                   aria-hidden="true">
@@ -574,7 +574,7 @@ eleventyNavigation:
                   loading="lazy"
                   decoding="async"
                   src="/assets/images/tempe.webp"
-                  alt="mechanic"
+                  alt="Tempe"
                   width="413"
                   height="240"
                   aria-hidden="true">
@@ -612,7 +612,7 @@ eleventyNavigation:
                   loading="lazy"
                   decoding="async"
                   src="/assets/images/mesa.webp"
-                  alt="mechanic"
+                  alt="Mesa"
                   width="413"
                   height="240"
                   aria-hidden="true">
@@ -650,7 +650,7 @@ eleventyNavigation:
                   loading="lazy"
                   decoding="async"
                   src="/assets/images/gilbert.webp"
-                  alt="mechanic"
+                  alt="Gilbert"
                   width="413"
                   height="240"
                   aria-hidden="true">
@@ -688,7 +688,7 @@ eleventyNavigation:
                   loading="lazy"
                   decoding="async"
                   src="/assets/images/chandler.webp"
-                  alt="mechanic"
+                  alt="Chandler"
                   width="413"
                   height="240"
                   aria-hidden="true">
